--- a/Core/SearchCore.csproj
+++ b/Core/SearchCore.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Tree2D.cs" />
     <Compile Include="LinearSearch.cs" />
     <Compile Include="Search.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
