--- a/Core/SearchCore.csproj
+++ b/Core/SearchCore.csproj
@@ -48,7 +48,7 @@
     <Compile Include="Search.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Searcher.cs" />
-    <Compile Include="VectorDominationSearcher.cs" />
+    <Compile Include="VectorDominationSearch.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
